tests/baselines/reference/esModuleInteropDefaultImports.errors.txt
tests/cases/compiler/b.ts(15,1): error TS2349: This expression is not callable.
  Type 'typeof import("tests/cases/compiler/mod")' has no call signatures.
tests/cases/compiler/b.ts(16,1): error TS2349: This expression is not callable.
  Type 'typeof import("tests/cases/compiler/mod")' has no call signatures.
tests/cases/compiler/b.ts(17,1): error TS2349: This expression is not callable.
  Type 'typeof import("tests/cases/compiler/mod")' has no call signatures.
tests/cases/compiler/b.ts(18,1): error TS2349: This expression is not callable.
  Type 'typeof import("tests/cases/compiler/mod")' has no call signatures.
tests/cases/compiler/b.ts(19,6): error TS2349: This expression is not callable.
  Type 'typeof import("tests/cases/compiler/mod")' has no call signatures.
tests/cases/compiler/b.ts(20,6): error TS2349: This expression is not callable.
  Type 'typeof import("tests/cases/compiler/mod")' has no call signatures.


==== tests/cases/compiler/mod.ts (0 errors) ====
    declare function fun(): void;
    export default fun;
==== tests/cases/compiler/a.ts (0 errors) ====
    import mod = require("./mod");
    export = mod;
==== tests/cases/compiler/b.ts (6 errors) ====
    import a from "./a";
    import { default as b } from "./a";
    import c, { default as d } from "./a";
    import * as self from "./b";
    export { default } from "./a";
    export { default as def } from "./a";
    
    a === b;
    b === c;
    c === d;
    d === self.default;
    self.default === self.def;
    
    // should all fail
    a();
    ~
!!! error TS2349: This expression is not callable.
!!! error TS2349:   Type 'typeof import("tests/cases/compiler/mod")' has no call signatures.
    b();
    ~
!!! error TS2349: This expression is not callable.
!!! error TS2349:   Type 'typeof import("tests/cases/compiler/mod")' has no call signatures.
    c();
    ~
!!! error TS2349: This expression is not callable.
!!! error TS2349:   Type 'typeof import("tests/cases/compiler/mod")' has no call signatures.
    d();
    ~
!!! error TS2349: This expression is not callable.
!!! error TS2349:   Type 'typeof import("tests/cases/compiler/mod")' has no call signatures.
    self.default();
         ~~~~~~~
!!! error TS2349: This expression is not callable.
!!! error TS2349:   Type 'typeof import("tests/cases/compiler/mod")' has no call signatures.
    self.def();
         ~~~
!!! error TS2349: This expression is not callable.
!!! error TS2349:   Type 'typeof import("tests/cases/compiler/mod")' has no call signatures.
    
    // should all work
    a.default();
    b.default();
    c.default();
    d.default();
    self.default.default();
    self.def.default();